remove the now-deprecated plotMedExprs()

--- a/vignettes/cytofWorkflow.Rmd
+++ b/vignettes/cytofWorkflow.Rmd
@@ -670,10 +670,11 @@ There might be instances of small cell populations for which no cells are observ
 It is helpful to plot the median expression of all markers in each cluster for each sample colored by condition, to get a rough image of how strong the differences might be (Figure \@ref(fig:diff-expr2-plot-median-expr)).  We do this by combining boxplots and jitter.
 
 ```{r diff-expr2-plot-median-expr, fig.height = 8, fig.width=10, fig.cap = "Median (arcsinh-transformed) expression of 14 signaling markers (x-axis) across the 8 identified PBMC cell populations (individual panels). Values for the two conditions are indicated with different colors: red for the unstimulated (Ref) and blue for the stimulated with BCR/FcR-XL (BCRXL) samples. Values for each patient are indicated with different shape. The 8 cell populations are a result of manual merging of the 20 FlowSOM metaclusters."}
-p <- plotMedExprs(sce, k = "merging1", 
+p <- plotPbExprs(sce, k = "merging1", fun = "median",
     facet_by = "cluster_id", shape_by = "patient_id")
 p$facet$params$ncol <- 2
 p
+
 ```
 
 To present how accounting for the between patient variability with the mixed model increases sensitivity, we also fit a regular linear model.  The linear mixed model has a random intercept for each patient.
@@ -726,7 +727,9 @@ sce <- mergeClusters(sce, k = "meta20", id = "merging_all",
 As before, the median expression can be plotted (Figure \@ref(fig:diff-expr1-plot-median-expr)).
 
 ```{r diff-expr1-plot-median-expr, fig.height = 8, fig.cap = "Median (arcsinh-transformed) expression of 14 signaling markers calculated from all the cells in a given sample in the PBMC dataset. Values for the two conditions are indicated with different colors: red for the unstimulated (Ref) and blue for the stimulated with BCR/FcR-XL (BCRXL) samples. Values for each patient are indicated with different shape."}
-p <- plotMedExprs(sce, features = "state", shape_by = "patient_id")
+p <- plotPbExprs(sce, features = "state", 
+                  fun = "median",
+                  shape_by = "patient_id")
 p$facet$params$ncol <- 3
 p
 ```
